--- a/Brief.tex
+++ b/Brief.tex
@@ -6,22 +6,40 @@
 
 \makeatother
 
+% Absenderfeld
+\ABSName{Name des Absenders}
+\ABSStrasse{Absenderstraße 1}
+\ABSPLZ{01234}
+\ABSOrt{Absenderort}
+\ABSPhone{+49~123~123456789}
+\ABSMobile{+49~123~123456789}
+\ABSMail{absender@provider.url}
+\ABSInfo{Zusätzliche Informationen über den Absender}
 
-	\ZViii{elektronische Freimachungsvermerke}
-	\ZVii{Vorausfügung}
-	\ZVi{z.\,B.\ Einschreiben}
-	\AZFirma{Firma}
-	\AZAnrede{Frau/Herr}
-	\AZName{Name des Addressaten}
-	\AZStrasse{Zielstraße 1}
-	\AZPLZOrt{12345 Zielort}
-	\AZLand{Deutschland}
-	\Betreff{Betreff}
-	%\Briefkopf{}
-	
+% Adressfeld
+\ZViii{elektronische Freimachungsvermerke}
+\ZVii{Vorausfügung}
+\ZVi{z.\,B.\ Einschreiben}
+\AZFirma{Firma}
+\AZAnrede{Frau/Herr}
+\AZName{Name des Addressaten}
+\AZStrasse{Zielstraße 1}
+\AZPLZOrt{12345 Zielort}
+\AZLand{Deutschland}
+
+% Betreff
+\IhrZeichen{Ihr Zeichen}
+\IhrSchreiben{01.23.4567}
+\KundenNummer{0123456789}
+\Betreff{Betreff}
+
+% Aussehen
+%\Briefkopf{}
+%\Briefpapier{}
+
 \begin{document}
 	\maketitle{}
-	\Anrede{Liebe(r) Addressat(in)}
+	\Anrede{Liebe(r) Adressat(in)}
 	
 	\lipsum[1-2]
 	
@@ -29,21 +47,15 @@
 	\begin{itemize}
 		\item Strich in Adressfeld genau so lang, wie längster Eintrag
 		\item Dokumentation für jede Option
-		\item Zusatzinfos unter Absenderinfos
-		\item Location Absnederinfos configurable
+		\item Location Absenderinfos configurable
 		\item Briefpapier (Hintergrundbild/PDF) optional
+		\item Unterschriftbild configurable, if none, put an empty line (of specified length) to sign it manually
 	\end{itemize}
 	
 	\Gruss{Dein}
 	
 	% Post Scriptum
 	%PS: Ich bin bis März nur telefonisch erreichbar.
-	
-	% Anlage(n)
-	% Standardmäßig wird "Anlage(n)" eingefügt, dies kann überschrieben werden, hier mit "Anlage" oder "Anlagen"
-	%\setkomavar*{enclseparator}{Anlage}
-	%\setkomavar*{enclseparator}{Anlagen}
-	%\encl{Kopie des Ausweises}
 	
 	% Weitere PDFs können automatisch angefügt werden, z.B. Ahnänge.
 	%\includepdf[pages=-,openright]{pfad/zu/weiteren/pdfs/dokument.pdf}
