Added costumizable signature picture; Error, if file not exists.

--- a/Brief.tex
+++ b/Brief.tex
@@ -2,9 +2,11 @@
 
 \usepackage{lipsum}
 
+% Development section begin
 \makeatletter
-
 \makeatother
+% Development section end
+
 
 % Absenderfeld
 \ABSName{Name des Absenders}
@@ -36,6 +38,7 @@
 % Aussehen
 %\Briefkopf{}
 %\Briefpapier{}
+\Signature{Unterschrift.png}
 
 \begin{document}
 	\maketitle{}
