Support for background added; Predictive bugfix in signature.

--- a/Brief.tex
+++ b/Brief.tex
@@ -4,6 +4,7 @@
 
 % Development section begin
 \makeatletter
+
 \makeatother
 % Development section end
 
@@ -36,8 +37,8 @@
 \Betreff{Betreff}
 
 % Aussehen
-%\Briefkopf{}
-%\Briefpapier{}
+\Briefkopf{}
+\Briefpapier{}
 \Signature{Unterschrift.png}
 
 \begin{document}
@@ -51,8 +52,7 @@
 		\item Strich in Adressfeld genau so lang, wie längster Eintrag
 		\item Dokumentation für jede Option
 		\item Location Absenderinfos configurable
-		\item Briefpapier (Hintergrundbild/PDF) optional
-		\item Unterschriftbild configurable, if none, put an empty line (of specified length) to sign it manually
+		\item Location Absenderinfos configurable
 	\end{itemize}
 	
 	\Gruss{Dein}
