Removed unused packages from the class.

--- a/Brief.tex
+++ b/Brief.tex
@@ -1,13 +1,13 @@
 \documentclass[twoside]{brbrief}
 
 \usepackage{lipsum}
+\usepackage[ngerman]{babel}		% for hyphenation and date format
 
 % Development section begin
 \makeatletter
 
 \makeatother
 % Development section end
-
 
 % Absenderfeld
 \ABSName{Name des Absenders}
@@ -51,7 +51,6 @@
 	\begin{itemize}
 		\item Strich in Adressfeld genau so lang, wie längster Eintrag
 		\item Dokumentation für jede Option
-		\item Location Absenderinfos configurable
 		\item Location Absenderinfos configurable
 	\end{itemize}
 	
